--- a/css/style.css
+++ b/css/style.css
@@ -25,12 +25,13 @@ body {
 }
 
 .moreIndicator {
-	height: 300px;
+	height: 50px;
 	width: 50px;
 	position: absolute;
 	z-index: 3;
 	opacity: .8;
-	top: 0px;
+	top: 330px;
+	left: 300px;
 }
 
 .thumbnail {
@@ -45,8 +46,8 @@ body {
 }
 
 #nav {
-	clear: both;
 	position: relative;
+	clear: both;
 }
 
 #prevPhoto {
@@ -55,6 +56,7 @@ body {
 }
 
 #nextPhoto {
+	float: right;
 	height: 42px;
 	width: 42px;
 }
@@ -70,12 +72,21 @@ body {
 
 /*Add CSS styles to rotate the element 90deg
 Make it animate nicely. You'll need CSS3 for this*/
-.rot90 {}
+.rot90 {
+	transform: rotate(90deg);
+	animation-duration: 7s;
+}
 
 /*Add CSS styles to rotate the element 180deg
 Make it animate nicely. You'll need CSS3 for this*/
-.rot180 {}
+.rot180 {
+	transform: rotate(180deg);
+	animation-duration: 7s;
+}
 
 /*Add CSS styles to rotate the element 270deg
 Make it animate nicely. You'll need CSS3 for this*/
-.rot270 {}
+.rot270 {
+	transform: rotate(270deg);
+	animation-duration: 7s;
+}
