--- a/css/style.css
+++ b/css/style.css
@@ -73,20 +73,32 @@ body {
 /*Add CSS styles to rotate the element 90deg
 Make it animate nicely. You'll need CSS3 for this*/
 .rot90 {
-	transform: rotate(90deg);
+	-webkit-transform: rotate(90deg);
+		-moz-transform: rotate(90deg);
+		-o-transform:rotate(90deg);
+		-ms-transform: rotate(90deg);
+		transform: rotate(90deg);
 	animation-duration: 7s;
 }
 
 /*Add CSS styles to rotate the element 180deg
 Make it animate nicely. You'll need CSS3 for this*/
 .rot180 {
-	transform: rotate(180deg);
+	-webkit-transform: rotate(180deg);
+		-moz-transform: rotate(180deg);
+		-o-transform:rotate(180deg);
+		-ms-transform: rotate(180deg);
+		transform: rotate(180deg);
 	animation-duration: 7s;
 }
 
 /*Add CSS styles to rotate the element 270deg
 Make it animate nicely. You'll need CSS3 for this*/
 .rot270 {
-	transform: rotate(270deg);
+	-webkit-transform: rotate(270deg);
+		-moz-transform: rotate(270deg);
+		-o-transform:rotate(270deg);
+		-ms-transform: rotate(270deg);
+		transform: rotate(270deg);
 	animation-duration: 7s;
 }
